--- a/public/style.css
+++ b/public/style.css
@@ -31,7 +31,7 @@ section {
   text-align: justify;
 }
 
-.subsection p a {
+.subsection p a, .subsection li a {
   font-weight: bold;
   text-decoration: underline;
   color: #333;
