--- a/public/style.css
+++ b/public/style.css
@@ -1,462 +1,23 @@
 body {
-  font-family: 'Karla', sans-serif;
-  padding-top: 50px;
+  font-family: 'ABeeZee', sans-serif;
 }
 
-.navbar {
-  background-color: #000;
+a {
+  text-decoration: none;
 }
 
-.navbar-title {
-  float: left;
-  padding: 15px;
-  font-size: 18px;
-  line-height: 20px;
-  color: #ddd;
+a:visited {
+  color: rgb(181, 137, 0);
 }
 
-.list-last {
-  margin-top: 30px;
-}
-
-section {
-  display: block;
-}
-
-.subsection {
-  padding-bottom: 40px;
-}
-
-.subsection p {
-  text-align: justify;
-}
-
-.subsection p a, .subsection li a {
-  font-weight: bold;
-  text-decoration: underline;
-  color: #333;
-}
-
-.layover-container {
-  position: relative;
-}
-
-#content {
-  width: 100%;
-}
-
-#about {
-  background-color: #fff;
-}
-
-#about .section-title {
-  color: #888;
-}
-
-#about img {
-  border: 12px solid #ccc;
-}
-
-#about li {
-  font-size: 14px;
-  line-height: 35px;
-}
-
-.navbar ul li .nav-about {
-  color: #fff;
-}
-
-.navbar ul li .nav-about:hover {
-  color: #fff;
-}
-
-#work {
-  background-color: #8bf;
-}
-
-#work .section-title {
-  color: #458;
-}
-
-#work img {
-  border: 12px solid #68c;
-  background-color: #fff;
-}
-
-.navbar ul li .nav-work {
-  color: #8bf;
-}
-
-.navbar ul li .nav-work:hover {
-  color: #8bf;
-}
-
-#school {
-  background-color: #fe6;
-}
-
-#school .section-title {
-  color: #873;
-}
-
-#school img {
-  border: 12px solid #cb5;
-}
-
-.navbar ul li .nav-school {
-  color: #fe6;
-}
-
-.navbar ul li .nav-school:hover {
-  color: #fe6;
-}
-
-#projects {
-  background-color: #f8f;
-}
-
-#projects .section-title {
-  color: #848;
-}
-
-#projects img {
-  border: 12px solid #c6c;
-}
-
-.navbar ul li .nav-projects {
-  color: #f8f;
-}
-
-.navbar ul li .nav-projects:hover {
-  color: #f8f;
-}
-
-#other {
-  background-color: #8c6;
-}
-
-#other .section-title {
-  color: #463;
-}
-
-#other img {
-  border: 12px solid #685;
-}
-
-.navbar ul li .nav-other {
-  color: #8c6;
-}
-
-.navbar ul li .nav-other:hover {
-  color: #8c6;
-}
-
-#other p {
-  text-align: justify;
-}
-
-.layover-text a {
-  pointer-events: all;
-  margin: 0px 12px;
+a:hover {
+  font-style: italic;
 }
 
 footer {
-  font-size: 11px;
-  color: #eee;
-  background-color: #333;
-  height: auto;
-  padding: 4px 28px;
+  font-size: smaller;
 }
 
-footer i,
-footer span {
-  margin: 5px;
-}
-
-#carousel {
-  margin-bottom: 20px;
-  width: 100%;
-}
-
-.carousel-control {
-  margin: 33% 20px;
-}
-
-.carousel-control,
-.carousel-control:hover {
-  background-image: none !important;
-}
-
-.item img {
-  border-radius: 6px;
-}
-
-.carousel-caption {
-  bottom: 0px;
-  opacity: 0.67;
-}
-
-.carousel-linked-nav,
-.item img {
-  display: block;
-  margin: 0px auto;
-}
-
-.carousel-linked-nav {
-  width: 120px;
-  margin-bottom: 20px;
-}
-
-.carousel-linked-nav a {
-  color: #463 !important;
-}
-
-.pagination > .active > a,
-.pagination > .active > a:hover {
-  background-color: #685;
-  border-color: #463;
-  color: #fff !important;
-}
-
-/* xs screen */
-
-.nav-a span {
-  margin-left: 10px;
-}
-
-#links {
-  width: 100%;
-  padding: 0px 15% 40px 20%;
-}
-#lead p {
-  display: block;
-  width: 75%;
-  margin: auto;
-  text-align: justify;
-  padding-bottom: 40px;
-}
-#me {
-  width: 100%;
-}
-#me img {
-  display: block;
-  width: 75%;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 40px;
-}
-
-section {
-  padding: 16px;
-}
-
-.section-title p {
-  font-size: 48px;
-  font-weight: bold;
-  text-align: center;
-}
-
-.ssr-left,
-.ssr-right {
-  margin: auto;
-}
-.ssr-left.ssr-text h2,
-.ssr-right.ssr-text h2,
-.ssr-left.ssr-text h5,
-.ssr-right.ssr-text h5
-{
-  text-align: center;
-}
-
-.center-mobile {
-  text-align: center !important;
-}
-
-.img-logo {
-  max-width: max(276px, 75%);
- }
-
-.layover-bg {
+.hidden {
   display: none;
-}
-
-.layover-container div {
-  margin-top: 18px;
-}
-
-.layover-text {
-  color: #333;
-  text-align: center;
-}
-
-.foot-left,
-.foot-right {
-  text-align: center;
-}
-
-/* sm screen */
-
-@media
-(min-width: 640px) {
-  #about .row {
-    width: 100%;
-    position: relative;
-  }
-  #links {
-    width: 50%;
-    padding: 0px 15% 40px 10%;
-  }
-  #lead p {
-    display: block;
-    width: 75%;
-    margin: auto;
-    text-align: justify;
-    padding-bottom: 40px;
-  }
-  #me {
-    position: absolute;
-    padding-right: 8%;
-  }
-  #me img {
-    float: right !important;
-    display: block;
-    bottom: 0px;
-    width: 50%;
-    max-height: 330px;
-    max-width: 330px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 40px;
-  }
-}
-
-/* md screen */
-
-@media
-(min-width: 1024px) {
-  .nav-a {
-    width: 120px;
-    text-align: center;
-  }
-  .nav-a span {
-    vertical-align: text-bottom;
-    font-size: 24px;
-  }
-
-  #about {
-    padding: 48px 48px 48px 5%;
-  }
-  #links {
-    width: 25%;
-    padding: 0px 72px 0px 96px;
-  }
-  #lead {
-    float: left !important;
-    width: 50%;
-    padding: 0px 70px 0px 20px;
-  }
-  #lead p {
-    width: 100%;
-  }
-  #me {
-    position: inherit;
-    width: 25%;
-    padding: 0%;
-  }
-  #me img {
-    width: 100%;
-    min-width: 200px;
-  }
-
-  section {
-    padding: 48px 72px;
-  }
-
-  .section-title p {
-    font-size: 72;
-    font-weight: bold;
-    text-align: left;
-  }
-
-  .ssr-left {
-    float: left !important;
-  }
-  .ssr-right {
-    float: right !important;
-  }
-  .ssr-right.ssr-text {
-    text-align: right;
-  }
-  .ssr-left.ssr-text {
-    padding-right: 50px;
-  }
-  .ssr-right.ssr-text {
-    padding-left: 50px;
-  }
-  .ssr-left.ssr-text h2,
-  .ssr-left.ssr-text h5
-  {
-    text-align: left;
-  }
-  .ssr-right.ssr-text h2,
-  .ssr-right.ssr-text h5 {
-    text-align: right;
-  }
-
-  .center-mobile {
-    text-align: inherit !important;
-  }
-
-  .img-logo {
-    max-width: 350px;
-   }
-  .layover-container img {
-    z-index: 1;
-  }
-
-  .layover-container div {
-    pointer-events: none;
-    position: absolute;
-    left: 12px;
-    right: 12px;
-    bottom: 12px;
-    height: 45%;
-  }
-
-  .layover-bg {
-    display: inherit;
-    background-color: #000;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
-    filter: alpha(opacity=50);
-    opacity: 0.5;
-    z-index: 2;
-  }
-
-  .layover-text {
-    color: #eee;
-    text-align: center;
-    padding: 10% 0px;
-    z-index: 3;
-  }
-
-  .foot-left {
-    float: left !important;
-  }
-  .foot-right {
-    float: right !important;
-    text-align: right;
-  }
-}
-
-/* lg screen */
-
-@media
-(min-width: 1440px) {
-  #links {
-    margin-left: -96px;
-  }
-
-  section {
-    padding: 48px 192px;
-  }
 }
